--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -58,3 +58,41 @@
   text-decoration: line-through;
   color: #999;
 }
+
+@media screen and (max-width: 1360px) {
+  .main-banner {
+    h1 {
+      font-size: 3.5rem;
+    }
+    h2 {
+      font-size: 1.5rem;
+    }
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .main-banner {
+    h1 {
+      font-size: 2.5rem;
+    }
+    h2 {
+      font-size: 1rem;
+    }
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .main-banner {
+    width: 80vw;
+    h1 {
+      font-size: 2rem;
+    }
+  }
+}
+@media screen and (max-width: 650px) {
+  .main-banner {
+    h1 {
+      font-size: 2rem;
+    }
+  }
+}
