--- a/src/scss/_onSale.scss
+++ b/src/scss/_onSale.scss
@@ -8,3 +8,16 @@
   @include top-bottom-border();
   color: $main-color;
 }
+@media screen and (max-width: 970px) {
+  .onsale-wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (max-width: 700px) {
+  .onsale-title {
+    font-size: 1.5rem;
+  }
+  .onsale-wrapper {
+    grid-template-columns: 1fr;
+  }
+} ;
