--- a/src/scss/_singleProduct.scss
+++ b/src/scss/_singleProduct.scss
@@ -129,3 +129,15 @@
     }
   }
 }
+@media screen and (max-width: 800px) {
+  .header-content {
+    flex-direction: column;
+    align-items: center;
+    .product-left {
+      margin: auto;
+    }
+    .product-right {
+      margin: 1rem 0;
+    }
+  }
+}
