--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -3,7 +3,7 @@
 
   .container {
     display: flex;
-    position: relative;
+    //position: relative;
 
     //Loading screen
     .spinner-container {
