--- a/src/scss/_compare.scss
+++ b/src/scss/_compare.scss
@@ -3,8 +3,8 @@
   display: flex;
   flex-direction: column;
   min-height: 20rem;
-  width: fit-content;
   justify-content: center;
+  overflow-x: scroll;
 
   table {
     @include table-config();
