--- a/src/scss/_filters.scss
+++ b/src/scss/_filters.scss
@@ -25,6 +25,10 @@
     }
   }
 }
+.close-filters {
+  @include primary-btn();
+  display: none;
+}
 
 @media screen and (max-width: 1300px) {
   .filters {
@@ -46,12 +50,21 @@
 @media screen and (max-width: 650px) {
   .filters {
     position: absolute;
-    top: 5rem;
-    left: -500px;
+    top: 1rem;
+    left: -100%;
     z-index: 10;
     transition: all 0.75s ease-out;
   }
   .show-filters {
-    left: 0;
+    width: 80vw;
+    left: 50%;
+    transform: translate(-50%);
+  }
+  .close-filters {
+    display: block;
+    margin: 0.5rem auto;
+  }
+  .filters-title {
+    display: none;
   }
 }
