added login box

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,8 @@
 @import './base';
 @import './loading';
 @import './error';
-@import './navbar';
+@import './navbar/navbar';
+@import './navbar/accountLogin';
 @import './home';
 @import './listItem';
 @import './footer';
