--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import './error';
 @import './navbar/navbar';
 @import './navbar/accountLogin';
+@import './navbar/searchBar.scss';
 @import './home';
 @import './listItem';
 @import './footer';
