--- a/src/scss/navbar/_navbar.scss
+++ b/src/scss/navbar/_navbar.scss
@@ -6,6 +6,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   padding: 1rem;
+  padding-bottom: 3px;
 }
 .nav-header {
   position: relative;
