added seach functionality

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,16 +4,16 @@
 @import './error';
 @import './navbar/navbar';
 @import './navbar/accountLogin';
-@import './navbar/searchBar.scss';
 @import './home';
 @import './listItem';
 @import './footer';
 @import './singleProduct';
 @import './recommendations';
 @import './overview';
-@import './products';
+@import './Products/products';
+@import './Products/resultOptions';
+@import './Products/searchBar.scss';
 @import './filters';
-@import './resultOptions';
 @import './about';
 @import './onSale';
 @import './cart';
