--- a/src/scss/navbar/_navbar.scss
+++ b/src/scss/navbar/_navbar.scss
@@ -6,7 +6,6 @@ nav {
   justify-content: space-around;
   align-items: center;
   padding: 1rem;
-  padding-bottom: 3px;
 }
 .nav-header {
   position: relative;
@@ -61,7 +60,6 @@ nav {
     position: relative;
     @include reset-btn();
     font-size: 1.5rem;
-    //margin: 0.5rem;
     padding: 0.5rem;
 
     svg {
@@ -73,7 +71,7 @@ nav {
     .cart-item-total {
       position: absolute;
       top: 0;
-      right: 0;
+      right: -10px;
       background-color: $main-color;
       color: $light-bg;
       font-size: 0.85rem;
