rearranged some componnets

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,7 +13,7 @@
 @import './Products/products';
 @import './Products/resultOptions';
 @import './Products/searchBar.scss';
-@import './filters';
+@import './Products/filters';
 @import './about';
 @import './onSale';
 @import './cart';
