--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,9 +7,10 @@
 @import './home';
 @import './listItem';
 @import './footer';
-@import './singleProduct';
-@import './recommendations';
-@import './overview';
+@import './SingleProductPage/singleProduct';
+@import './SingleProductPage/recommendations';
+@import './SingleProductPage/overview';
+@import './SingleProductPage/reviews';
 @import './Products/products';
 @import './Products/resultOptions';
 @import './Products/searchBar.scss';
