--- a/src/scss/_listItem.scss
+++ b/src/scss/_listItem.scss
@@ -60,7 +60,7 @@
         font-size: 1.5rem;
         margin: 0;
         color: $muted;
-        cursor: not-allowed;
+        pointer-events: none;
       }
     }
   }
