add Dashboard header

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,3 +20,5 @@
 @import './cart';
 @import './successMessage';
 @import './compare';
+@import './Dashboard/dashboard';
+@import './Dashboard/sidebar';
