--- a/src/scss/navbar/_navbar.scss
+++ b/src/scss/navbar/_navbar.scss
@@ -93,9 +93,22 @@ nav {
   color: $light-bg;
   padding: 0.5rem;
   text-align: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   a {
     color: $light-bg;
     text-decoration: underline;
+  }
+  #admin-btn {
+    @include primary-btn();
+    background-color: $light-bg;
+    color: $main-color;
+    margin: 0;
+    &:hover {
+      background-color: darken($light-bg, 5%);
+      color: darken($main-color, 5%);
+    }
   }
 }
 .menu-bars {
