--- a/src/scss/Dashboard/_sidebar.scss
+++ b/src/scss/Dashboard/_sidebar.scss
@@ -25,8 +25,10 @@
   border-top: 1px solid $light-bg;
   border-bottom: 1px solid $light-bg;
   li {
-    padding: 0.5rem;
     a {
+      display: inline-block;
+      padding: 0.5rem;
+      width: 100%;
       color: $light-bg;
     }
     &:hover {
@@ -34,4 +36,7 @@
       cursor: pointer;
     }
   }
+}
+.active-link {
+  background-color: $main-color;
 }
