add breadcrumbs for dashboard

--- a/src/scss/Dashboard/_sidebar.scss
+++ b/src/scss/Dashboard/_sidebar.scss
@@ -37,6 +37,7 @@
     }
   }
 }
-.active-link {
+/*not working interferes with front page and routes too */
+/* .active-link {
   background-color: $main-color;
-}
+} */
