--- a/src/scss/Dashboard/_dashboard.scss
+++ b/src/scss/Dashboard/_dashboard.scss
@@ -1,11 +1,11 @@
 .admin-container {
-  margin-left: 15vw;
+  margin-left: 280px;
   position: relative;
 }
 .admin-header {
   background-color: $main-color;
   color: $light-bg;
-  margin-left: 15vw;
+  margin-left: 280px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -15,5 +15,35 @@
     color: $light-bg;
     font-size: 1.5rem;
     margin: 0.5rem;
+  }
+}
+.admin-profile {
+  text-align: center;
+  margin-bottom: 5rem;
+}
+.admin-profile-img-container {
+  margin: auto;
+  width: 75px;
+  img {
+    border-radius: 50%;
+  }
+}
+.admin-sidebar.collapsed .admin-profile h2 {
+  visibility: hidden;
+}
+.admin-sidebar.collapsed .admin-profile h3 {
+  font-size: 0.75rem;
+}
+.admin-sidebar.collapsed .admin-profile-img-container {
+  width: 45px;
+}
+
+.minimize-menu {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0.5rem;
+  .minimize-menu-btn {
+    cursor: pointer;
   }
 }
