--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,3 +23,4 @@
 @import './Dashboard/dashboard';
 @import './Dashboard/sidebar';
 @import './Dashboard/breadcrumbs';
+@import './Dashboard/cards';
