--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,3 +24,4 @@
 @import './Dashboard/sidebar';
 @import './Dashboard/breadcrumbs';
 @import './Dashboard/cards';
+@import './Dashboard/mainDash.scss';
