--- a/src/scss/Dashboard/_cards.scss
+++ b/src/scss/Dashboard/_cards.scss
@@ -5,8 +5,8 @@
   padding: 3rem 0;
 }
 .card-wrapper {
-  max-width: 250px;
-  max-height: 175px;
+  width: 250px;
+  height: 175px;
   display: grid;
   grid-template-rows: 1fr 1fr;
   header {
