feat: issue #11 add skeleton loading

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
 @import './onSale';
 @import './cart';
 @import './successMessage';
+@import './skeleton';
 @import './compare';
 @import './Dashboard/dashboard';
 @import './Dashboard/sidebar';
